--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>1.4.1.RELEASE</version>
+
+    <groupId>com.nickwongdev</groupId>
+    <artifactId>aspectj-maven-plugin</artifactId>
+    <version>1.12.1</version>      
+      
   </parent>
   <name>petclinic</name>
 
